# FocusLens

./: .gitignore  FocusLens-Plan.md  ISSUES.md  README.md
FocusLens/: Info.plist
FocusLens.xcodeproj/: project.pbxproj
FocusLens/AI/: BrowserBundleIds.swift  BrowserCategoryMapper.swift  BrowserClassifier.swift  GeminiClient.swift  GeminiPrompt.swift  GeminiSettings.swift  OllamaClient.swift  OllamaSettings.swift
FocusLens/App/: AppConstants.swift  FocusLensApp.swift  LoginItemManager.swift
FocusLens/Models/: ActivitySession.swift  Category.swift  CategoryOverride.swift  CategoryRule.swift
FocusLens/Storage/: ActivitySessionStore.swift  AppInsightsStore.swift  CategoryStore.swift  DatabaseManager.swift  IgnoredTitleStore.swift  NeverTrackStore.swift  RuleAuthoringService.swift
FocusLens/Tracking/: ActivityTracker.swift  CategorizationEngine.swift  IdleDetector.swift  PermissionManager.swift
FocusLens/UI/: AISettingsView.swift  ActivityAggregate.swift  MenuBarView.swift  (+15 more)
FocusLensTests/: ActivityTrackerTests.swift  AgentRunnerTests.swift  BrowserCategoryMapperTests.swift  BrowserClassifierTests.swift  CategorizationEngineTests.swift  DurationFormatterTests.swift  GeminiClientTests.swift  GeminiPromptTests.swift  IdleDetectorTests.swift  Migration007Tests.swift  Migration008Tests.swift  OllamaClientTests.swift  ResponseParserTests.swift  RuleAuthoringServiceTests.swift
focuslens-mcp/: DEMO.md  README.md  db.py  host.py  insights.py  prefab_app.py  prefab_report.py  prefab_utils.py  pyproject.toml  report_spec.py  server.py  summarize.py  web.py  web_server.py
(+27 files in other folders)
