[project]
name = "focuslens-mcp"
version = "0.1.0"
description = "MCP server + Ollama host + Prefab dashboard for FocusLens"
requires-python = ">=3.11"
dependencies = [
    "fastmcp[apps]>=3.0.0",
    "prefab-ui>=0.15.0",
    "ollama>=0.4.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
    "mcp[cli]>=1.27.0",
]

[project.scripts]
focuslens-research = "host:main"

[tool.uv]
package = false
